Added reporting of major VOC, added custom export to CSV module